<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dialog_team_title">The Team</string>
    <string name="bottom_nav_system_title">System</string>
    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
    <string name="bottom_nav_statusbar_title">Statusbar</string>
    <string name="bottom_nav_navigation_title">Navigation</string>
    <string name="bottom_nav_misc_title">Miscellaneous</string>
    <string name="heads_up_warning_text">Heads up notifications are meant to be used for multitasking while using full screen apps and/or playing games. Just know that while you use heads up notifications, you will not be able to use the ticker feature.</string>
    <string name="ticker_warning_text">The ticker feature is meant to be used as a mulitasking tool and brings a bit of splash of the old times. Just know that while you use the ticker feature, you will not be able to use heads up notifications.</string>
    <string name="lockscreen_title">Lock Screen</string>
    <string name="system_title">System</string>
    <string name="statusbar_title">Statusbar</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_stuff_title">Notification Stuff</string>
    <string name="notification_stuff_summary">Tweaks specific to system notifications</string>
    <string name="device_extras_title">Device extras</string>
    <string name="device_extras_summary">Tweaks specific to your device</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Tweaks that do not fit in other categories</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure power menu options such as flashlight, airplane mode or screenshot</string>
    <string name="face_auto_unlock_title">Face auto unlock</string>
    <string name="face_auto_unlock_summary">Dismiss lockscreen after face unlocking</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar or QS tile battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize your statusbar carrier label</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tweaks specific to system notifications</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Configure the quick settings with options ranging from headers to weather</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="statusbar_items_summary">Configure the visibility of statusbar items</string>
    <string name="ticker_title">Ticker</string>
    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tweaks</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Enable traffic indicators on the statusbar and configure traffic related tweaks</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure hardware keys and/or volume rocker options</string>
    <string name="navigationbar_title">Navigation bar</string>
    <string name="navigationbar_summary">Configure smartbar, fling or pulse</string>
    <string name="headsup_summary">Configure heads up options</string>
    <string name="omniswitch_title">Omniswitch</string>
    <string name="omniswitch_summary">Configure OmniSwitch options</string>
    <string name="recents_title">Recents</string>
    <string name="recents_summary">Configure OmniSwitch or AOSP recents</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="theme_select_title">System themes</string>
    <string name="omni_theme_select_none">Disabled</string>
    <string name="theme_select_summary">Theme your system</string>
    <string name="battery_style_category_title">Battery Styles</string>
    <string name="battery_style_category_summary">Customize Battery Icon</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_port">Portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="battery_style_big_circle">Big Circle</string>
    <string name="battery_style_big_dotted_circle">Big Dotted Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="battery_style_q">Q style</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="statusbar_ntraffic">Network Traffic</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="pwr_title">Power button</string>
    <string name="powermenu_reboot_title">Restart</string>
    <string name="powermenu_advanced_restart_title">Advanced restart</string>
    <string name="powermenu_advanced_restart_summary">Enables the advanced restart menu for other restarting options</string>
    <string name="powermenu_lockdown_title">Lockdown</string>
    <string name="powermenu_screenshot_title">Screenshot</string>
    <string name="status_bar_clock">Clock and Date</string>
    <string name="status_bar_clock_summary">Configure statusbar clock and date appearance</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="lockscreen_stuff">Locksreen stuff</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="battery_notification_settings">Battery light Customization</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="battery_light_enable">Enable</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="fast_color_cat_title">Fast charging</string>
    <string name="fast_charging_led_enabled_title">Enable fast charging color</string>
    <string name="fast_charging_led_enabled_summary">When fast charging, use different color till 90% charged</string>
    <string name="fast_charging_light_color_title">Color</string>
    <string name="fast_charging_light_color_summary"></string>
    <string name="color_blend_ok">@android:string/ok</string>
    <string name="color_blend_cancel">@android:string/cancel</string>
    <string name="color_blend_reset">Reset</string>
    <string name="color_blend_preview">Preview: %1$d%%</string>
    <string name="color_preview_start">Start</string>
    <string name="notification_heads">Heads up</string>
    <string name="less_boring_heads_up_title">Less boring heads up</string>
    <string name="less_boring_heads_up_summary">Show heads up only for dialer or messaging app</string>
    <string name="status_bar_ticker_title">Ticker</string>
    <string name="statusbar_tuner_title">Statusbar Items</string>
    <string name="quick_settings_title">QS styles </string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="audio_panel_view">Audio panel</string>
    <string name="audio_panel_view_media_title">Media</string>
    <string name="audio_panel_view_ringer_title">Ring</string>
    <string name="audio_panel_view_notification_title">Notification</string>
    <string name="audio_panel_view_alarm_title">Alarm</string>
    <string name="audio_panel_view_voice_title">Voice</string>
    <string name="audio_panel_view_bt_sco_title">Bluetooth</string>
    <string name="volume_panel_on_left_title">Volume Panel on Left</string>
    <string name="volume_panel_on_left_summary">Change volume panel from right side to left side</string>
    <string name="volume_dialog_timeout_title">Volume dialog timeout</string>
    <string name="statusbar_logo_category">Status bar logo</string>
    <string name="pe_logo_title">Show our logo on Statusbar</string>
    <string name="status_bar_logo_style_title">Custom logo style</string>
</resources>