<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2018 The Dirty Unicorns Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
            android:title="@string/notifications_title" >

      <com.shell.extras.preferences.GlobalSettingSwitchPreference
            android:key="heads_up_notifications_enabled"
            android:title="@string/heads_up_notifications"
            android:summaryOn="@string/summary_heads_up_enabled"
            android:summaryOff="@string/summary_heads_up_disabled"
            android:defaultValue="true" />

    <ListPreference
        android:key="heads_up_time_out"
        android:title="@string/heads_up_time_out_title"
        android:entries="@array/heads_up_time_out_entries"
        android:entryValues="@array/heads_up_time_out_values"
        android:persistent="false" />

    <ListPreference
        android:key="heads_up_snooze_time"
        android:title="@string/heads_up_snooze_title"
        android:entries="@array/heads_up_snooze_entries"
        android:entryValues="@array/heads_up_snooze_values"
        android:persistent="false" />

    <PreferenceCategory
            android:title="@string/heads_up_stoplist_title"
            android:key="stoplist_applications"
            android:dependency="heads_up_notifications_enabled" >
        <Preference
            android:key="add_stoplist_packages"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_heads_up_package"
            android:summary="@string/add_heads_up_stoplist_summary" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/heads_up_blacklist_title"
            android:key="blacklist_applications"
            android:dependency="heads_up_notifications_enabled" >
        <Preference
            android:key="add_blacklist_packages"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/add_heads_up_package"
            android:summary="@string/add_heads_up_blacklist_summary" />
    </PreferenceCategory>

   <PreferenceCategory
        android:title="@string/audio_panel_view">

        <com.shell.extras.preferences.SystemSettingSwitchPreference
            android:key="audio_panel_view_media"
            android:title="@string/audio_panel_view_media_title"
            android:defaultValue="true"
            android:enabled="false"/>

        <com.shell.extras.preferences.SystemSettingSwitchPreference
            android:key="audio_panel_view_ringer"
            android:title="@string/audio_panel_view_ringer_title"
            android:defaultValue="false"/>

        <com.shell.extras.preferences.SystemSettingSwitchPreference
            android:key="audio_panel_view_notification"
            android:title="@string/audio_panel_view_notification_title"
            android:defaultValue="false"/>

        <com.shell.extras.preferences.SystemSettingSwitchPreference
            android:key="audio_panel_view_alarm"
            android:title="@string/audio_panel_view_alarm_title"
            android:defaultValue="false"/>

        <com.shell.extras.preferences.SystemSettingSwitchPreference
            android:key="audio_panel_view_voice"
            android:title="@string/audio_panel_view_voice_title"
            android:defaultValue="false"/>

        <com.shell.extras.preferences.SystemSettingSwitchPreference
            android:key="audio_panel_view_bt_sco"
            android:title="@string/audio_panel_view_bt_sco_title"
            android:defaultValue="false"/>

        <com.shell.extras.preferences.SystemSettingSwitchPreference
        android:key="audio_panel_view_position"
        android:title="@string/volume_panel_on_left_title"
        android:summary="@string/volume_panel_on_left_summary"
        android:defaultValue="false" />

     <com.shell.extras.preferences.CustomSeekBarPreference
        android:key="volume_dialog_timeout"
        android:title="@string/volume_dialog_timeout_title"
        android:min="500"
        android:max="10000"
        android:defaultValue="3000"
        settings:interval="100"
        settings:unitsLeft=""
        settings:unitsRight="ms" />

    </PreferenceCategory>
</PreferenceScreen>
